// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Cover /> should render correctly 1`] = `
<Cover__Container
  height="175px"
  width="auto"
>
  <img
    alt=""
    src=""
  />
</Cover__Container>
`;

exports[`<Cover /> should render correctly with other size 1`] = `
<Cover__Container
  height="300px"
  width="400px"
>
  <img
    alt=""
    src=""
  />
</Cover__Container>
`;
